Add ambiguous GIF script and related files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 click==7.1.1
 Flask==1.1.1
 flask-csp==0.10
+imageio==2.8.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+numpy==1.18.2
 Pillow==7.0.0
 Werkzeug==1.0.0
